# cpp-starter

./: .clang-tidy  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/apps/graphics-programming/: CMakeLists.txt
src/apps/graphics-programming/src/: LoopStrategy.h  main.cpp  utils.h
src/apps/graphics-programming/src/geometry/: Cube.h  Mesh.h
src/apps/graphics-programming/src/gui/: Controls.h  Debug.h
src/apps/graphics-programming/src/math/: Faces.h  Triangle.h  Vec.h  Vec2.h  Vec3.h
src/apps/graphics-programming/src/rendering/: Camera.h  Painter.h  Projector.h  WavefrontLoader.h
src/apps/graphics-programming/src/services/: Camera.h  Painter.h  Projector.h  WavefrontLoader.h
src/apps/graphics-programming/src/shapes/: Cube.h  Mesh.h
src/apps/graphics-programming/src/structs/: Faces.h  Triangle.h
src/apps/pong/: CMakeLists.txt
src/apps/pong/src/strategies/: MinimalLoopStrategy.test.cpp
